--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "spk-app-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "A backend application developed using NestJS with GraphQL.",
+  "author": "Bartosz Cieślik",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT license",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,9 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
+    "graphql": "^16.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
