--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "firebase-admin": "^12.0.0",
     "graphql": "^16.8.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
