Add Firebase Config

--- a/.env/development.env
+++ b/.env/development.env
@@ -4,3 +4,4 @@ DATABASE_USERNAME=spk_development
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=spk_development
 DATABASE_LOGGING=true
+FIREBASE_CONFIG_FILE=firebaseSeviceAccountKey.json
