--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@nestjs/typeorm": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
     "firebase-admin": "^12.0.0",
     "graphql": "^16.8.1",
+    "graphql-parse-resolve-info": "^4.13.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
