add rabbit status

--- a/.env/development.env
+++ b/.env/development.env
@@ -3,5 +3,5 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=spk_development
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=spk_development
-DATABASE_LOGGING=true
+DATABASE_LOGGING=false
 FIREBASE_CONFIG_FILE=firebaseSeviceAccountKey.json
