--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.24",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
