Add emailSending and refactor user creation

--- a/.env/development.env
+++ b/.env/development.env
@@ -1,7 +1,14 @@
+# Database
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=spk_development
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=spk_development
 DATABASE_LOGGING=false
+
+#Firebase
 FIREBASE_CONFIG_FILE=firebaseSeviceAccountKey.json
+
+# Common
+APP_NAME="HopManager Dev"
+
