--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -36,6 +37,8 @@
     "firebase-admin": "^12.0.0",
     "graphql": "^16.8.1",
     "graphql-parse-resolve-info": "^4.13.0",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -66,6 +69,18 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "@nestjs-modules/mailer": {
+      "@types/ejs": "none",
+      "@types/pug": "none",
+      "@types/mjml": "none",
+      "ejs": "none",
+      "mjml": "none",
+      "pug": "none",
+      "liquidjs": "none",
+      "preview-email": "none"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
