--- a/.env/development.env
+++ b/.env/development.env
@@ -4,6 +4,7 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=spk_development
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=spk_development
+DATABASE_SSL=false
 DATABASE_LOGGING=false
 
 #Firebase
