--- a/.env/development.env
+++ b/.env/development.env
@@ -5,6 +5,7 @@ DATABASE_USERNAME=spk_development
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=spk_development
 DATABASE_SSL=false
+DATABASE_SSL_CA=
 DATABASE_LOGGING=false
 
 #Firebase
