--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d ./src/config/database.config.ts ",
+    "typeorm:sync": "npm run typeorm -- schema:sync"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
