Implement create-admin script

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node ./node_modules/typeorm/cli -d ./src/config/database.config.ts ",
-    "typeorm:sync": "npm run typeorm -- schema:sync"
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:sync": "ts-node ./node_modules/typeorm/cli -d ./src/config/database.config.ts schema:sync",
+    "console": "ts-node ./scripts/console.ts",
+    "console:create-admin": "ts-node ./scripts/console.ts create-admin"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
