Add firebase emulators

--- a/.env/development.env
+++ b/.env/development.env
@@ -8,8 +8,9 @@ DATABASE_SSL=false
 DATABASE_SSL_CA=
 DATABASE_LOGGING=false
 
-#Firebase
-FIREBASE_CONFIG_FILE=firebaseSeviceAccountKey.json
+#Firebase Emulators
+FIREBASE_EMULATORS_PROJECT_ID="demo-spkdev"
+FIREBASE_AUTH_EMULATOR_HOST="localhost:3051"
 
 # Common
 APP_NAME="HopManager Dev"
