--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "typeorm:sync": "ts-node ./node_modules/typeorm/cli -d ./src/config/database.config.ts schema:sync",
     "console": "ts-node ./scripts/console.ts",
-    "console:create-admin": "ts-node ./scripts/console.ts create-admin"
+    "console:create-admin": "ts-node ./scripts/console.ts create-admin",
+    "firebase:emulator": "firebase emulators:start --import ./firebase-emulators-data --export-on-exit"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
