--- a/.env/development.env
+++ b/.env/development.env
@@ -8,6 +8,7 @@ DATABASE_SSL=false
 DATABASE_SSL_CA=
 DATABASE_LOGGING=false
 
+# GOOGLE_APPLICATION_CREDENTIALS="firebaseSeviceAccountKey.json"
 #Firebase Emulators
 FIREBASE_EMULATORS_PROJECT_ID="demo-spkdev"
 FIREBASE_AUTH_EMULATOR_HOST="localhost:3051"
