--- a/.env/development.env
+++ b/.env/development.env
@@ -11,6 +11,7 @@ DATABASE_LOGGING=false
 # GOOGLE_APPLICATION_CREDENTIALS="firebaseSeviceAccountKey.json"
 #Firebase Emulators
 FIREBASE_EMULATORS_PROJECT_ID="demo-spkdev"
+FIREBASE_AUTH_EMULATOR_HOST="localhost:3051"
 
 # Common
 APP_NAME="HopManager Dev"
