--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
+    "ts-jest-mocker": "^1.0.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
