Implement Notifications with emails

--- a/.env/development.env
+++ b/.env/development.env
@@ -16,3 +16,11 @@ FIREBASE_AUTH_EMULATOR_HOST="localhost:3051"
 # Common
 APP_NAME="HopManager Dev"
 
+# Notifications
+DISABLE_PUSH_NOTIFICATIONS=true
+
+# Cron
+# CRON_CHECK_ADMISSION_STATE="*/10 * * * * *"
+# CRON_CHECK_ADOPTION_STATE="*/10 * * * * *"
+# CRON_NOTIFY_ABOUT_VET_VISIT="*/10 * * * * *"
+# CRON_NOTIFY_ABOUT_ENDED_VET_VISIT="*/10 * * * * *"
