--- a/.env/development.env
+++ b/.env/development.env
@@ -24,3 +24,6 @@ DISABLE_PUSH_NOTIFICATIONS=true
 # CRON_CHECK_ADOPTION_STATE="*/10 * * * * *"
 # CRON_NOTIFY_ABOUT_VET_VISIT="*/10 * * * * *"
 # CRON_NOTIFY_ABOUT_ENDED_VET_VISIT="*/10 * * * * *"
+
+# Auth
+AUTH_REDIRECT_URL="http://localhost:3000"
