--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typeorm:sync": "ts-node ./node_modules/typeorm/cli -d ./src/config/database.config.ts schema:sync",
     "console": "ts-node ./scripts/console.ts",
     "console:create-admin": "ts-node ./scripts/console.ts create-admin",
-    "firebase:emulator": "firebase emulators:start --import ./firebase-emulators-data --export-on-exit"
+    "firebase:emulator": "firebase emulators:start -P emulators --import ./firebase-emulators-data --export-on-exit"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
@@ -49,7 +49,7 @@
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.19",
     "typeorm-transactional": "^0.5.0"
@@ -63,16 +63,16 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.7",
-    "supertest": "^6.3.3",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-jest-mocker": "^1.0.0",
     "ts-loader": "^9.4.3",
